--- a/app/web.config
+++ b/app/web.config
@@ -23,7 +23,8 @@
                   stopProcessing="true">
                     <match url="^(.*)$" ignoreCase="false" />
                     <action type="Rewrite" url="index.php"
-                      appendQueryString="true" />
+                      appendQueryString="true"
+											 />
                 </rule>
             </rules>
         </rewrite>
